--- a/datacenter-project/package.json
+++ b/datacenter-project/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "gulp",
   "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -31,6 +28,9 @@
     "sass": "^1.43.4"
   },
   "dependencies": {
+    "gift": "^0.10.2"
+  },
+  "resolutions": {
     "gift": "^0.10.2"
   }
 }
