--- a/datacenter/config/_default/params.toml
+++ b/datacenter/config/_default/params.toml
@@ -8,7 +8,7 @@ RUB = "BY69BLNB30120000079425001643 (RUR)"
 bankAddress = 'в ОАО "БНБ-Банк", 220012, г. Минск, пр. Независимости, д. 87а'
 BIC = "БИК: BLNBBY2X"
 legalAddress = "220013, г. Минск, ул. Я Коласа 37-16"
-officeAddress = "220019, ул. Колхозная,д. 2-б, Минск, Беларусь."
+officeAddress = "220019, ул. Колхозная, д. 2-б, г. Минск, Беларусь"
 datacenterAddress = "г. Минск, ул. Шаранговича 19"
 headOfCompany = "Директор - Палышенкова Ирина Валентиновна, действует на основании Устава"
 numberOfDatacenter = "DB410D408ID320110627"
@@ -28,12 +28,5 @@ supportPhone2 = "+375 33 309 6666"
 
 # Navigation
 mapLink = "/company/map/"
-coloLink = "/services/colocation/rackmounted/"
+instructionLink = "/client/instruction"
 
-
-# Price Colocation
-# Обязательно указывать стоимость до сотых и использовать запятую
-server = "135,00"
-power = "12,00"
-unit = "66,00"
-supply = "36,00"
