--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.html",
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "start": "gulp",
+    "deploy": "gulp deploy"
+  },
   "devDependencies": {
     "browser-sync": "^2.27.7",
     "del": "^6.0.0",
@@ -25,9 +29,7 @@
     "gulp-webp-html": "^1.0.2",
     "gulp-webpcss": "^1.1.1",
     "imagemin-webp": "^6.0.0",
-    "sass": "^1.43.4"
-  },
-  "dependencies": {
+    "sass": "^1.43.4",
     "gift": "^0.10.2"
   },
   "resolutions": {
