refactoring: rewrite tariffCard component to class

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "browser-sync": "^2.27.7",
     "del": "^6.0.0",
+    "gift": "^0.10.2",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
@@ -29,10 +30,13 @@
     "gulp-webp-html": "^1.0.2",
     "gulp-webpcss": "^1.1.1",
     "imagemin-webp": "^6.0.0",
-    "sass": "^1.43.4",
-    "gift": "^0.10.2"
+    "sass": "^1.43.4"
   },
   "resolutions": {
     "gift": "^0.10.2"
+  },
+  "dependencies": {
+    "gulp-babel": "^8.0.0",
+    "gulp-terser": "^2.1.0"
   }
 }
